--- a/projects.html
+++ b/projects.html
@@ -186,21 +186,22 @@
   </footer>
 
   <!-- Floating Buttons -->
-  <div class="float-wrap" aria-label="أزرار تواصل عائمة">
-    <a class="fbtn" data-wa href="#" target="_blank" rel="noopener noreferrer" aria-label="واتساب">
-      <span class="sr">واتساب</span>
-      <svg viewBox="0 0 32 32" aria-hidden="true">
-        <path fill="currentColor" d="M19.11 17.53c-.3-.15-1.75-.86-2.02-.96-.27-.1-.47-.15-.67.15-.2.3-.77.96-.94 1.16-.17.2-.35.23-.65.08-.3-.15-1.25-.46-2.38-1.46-.88-.79-1.48-1.77-1.65-2.07-.17-.3-.02-.46.13-.61.13-.13.3-.35.45-.52.15-.17.2-.3.3-.5.1-.2.05-.38-.03-.53-.08-.15-.67-1.62-.92-2.22-.24-.58-.49-.5-.67-.51l-.57-.01c-.2 0-.53.08-.8.38-.27.3-1.05 1.03-1.05 2.5 0 1.47 1.08 2.9 1.23 3.1.15.2 2.12 3.23 5.14 4.53.72.31 1.29.5 1.73.64.73.23 1.39.2 1.92.12.59-.09 1.75-.72 2-1.41.25-.69.25-1.29.17-1.41-.08-.12-.27-.2-.57-.35z"/>
-        <path fill="currentColor" d="M16.02 3C9.39 3 4 8.39 4 15.02c0 2.11.55 4.17 1.6 5.99L4 29l8.2-1.55c1.78.97 3.78 1.48 5.82 1.48C24.65 28.93 30 23.55 30 16.92 30 10.3 22.65 3 16.02 3zm0 23.6c-1.83 0-3.62-.49-5.18-1.41l-.37-.22-4.87.92.95-4.75-.24-.39a10.55 10.55 0 0 1-1.58-5.63c0-5.82 4.74-10.56 10.56-10.56 5.82 0 10.56 4.74 10.56 10.56 0 5.82-4.74 10.56-10.83 10.56z"/>
-      </svg>
-    </a>
-    <a class="fbtn" data-phone href="#" aria-label="اتصال">
-      <span class="sr">اتصال</span>
-      <svg viewBox="0 0 24 24" aria-hidden="true">
-        <path fill="currentColor" d="M6.62 10.79a15.05 15.05 0 0 0 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1C10.07 21 3 13.93 3 5c0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.24.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
-      </svg>
-    </a>
-  </div>
+<div class="float-wrap" aria-label="أزرار تواصل عائمة">
+
+  <!-- واتساب -->
+  <a class="fbtn" data-wa href="#" target="_blank" rel="noopener noreferrer" aria-label="واتساب">
+    <span class="sr">واتساب</span>
+    <img src="assets/img/whatsapp.png" alt="واتساب">
+  </a>
+
+  <!-- اتصال -->
+  <a class="fbtn" data-phone href="#" aria-label="اتصال">
+    <span class="sr">اتصال</span>
+    <img src="assets/img/phone.png" alt="اتصال">
+  </a>
+
+</div>
+
 
   <script src="assets/js/app.js"></script>
 </body>
