--- a/projects.html
+++ b/projects.html
@@ -71,8 +71,8 @@
       <div class="section">
         <div class="section-head">
           <div>
-            <h2>معرض الصور (10 صور)</h2>
-            <p>اضغط على أي صورة للتكبير داخل نفس الصفحة.</p>
+            <h2>معرض الصور</h2>
+
           </div>
         </div>
 
